@@ -1,3 +1,10 @@
+2009-08-01  Miguel de Dios  <miguel.dedios@artica.es>
+
+	* include/functions_db.php: add external Module group "Not assigned"
+	because there are modules with this module group as agent software.
+	* extensions/module_groups.php: fix bug that the count are very wrong. And
+	add the link to Full list of monitors with filter.
+
 2009-08-30  Raul Mateos  <raulofpandora@gmail.com>
 
 	* extensions/update_manager/main.php: Change Pandora FMS text to 3.0
